# objCDchecker

./: CMakeLists.txt  README.md  objCDchecker.sln  objChecker.vcxproj  objChecker.vcxproj.filters  vssver2.scc
BVH/: util.cu  util.cuh
cmake/: InitCudaSampler.cmake  LidanAddQt.cmake  LidanBase.cmake  LidanBuild.cmake  LidanStart.cmake
cudalib/: help_gl.h  helper_cuda.h  helper_string.h
inc/: aabb.h  box.h  edge.h  forceline.h  mat3f.h  tri.h  tri_cu.cuh  vec3f.h  vec3fcu.cuh  vssver2.scc
set_result/: cpu.txt  cpu_bvh.txt  gpu_bvh.txt  gpu_with_more_cpu_memory.txt
src/: ccd.cpp  ccd.h  ccd_cpu_bvh_cd.cpp  ccd_cpu_bvh_cd.h  ccd_gpu_bvh_check.cu  ccd_gpu_bvh_check.cuh  ccd_gpu_bvh_self_check.cu  ccd_gpu_bvh_self_check.cuh  ccd_no_cpu_memory.cu  ccd_no_cpu_memory.cuh  ccd_oneblockoneface.cu  ccd_oneblockoneface.cuh  cmesh.cpp  cmesh.h  cmodel.cpp  cu_ccd.cu  cu_ccd.cuh  cubic.cpp  cubic.h  gpu_mesh.cpp  gpu_mesh.h  obj-viewer.cpp  vssver2.scc
